--- a/web/styles/index.css
+++ b/web/styles/index.css
@@ -27,7 +27,15 @@ input {
     margin-left: 25px;
 }
 
-#textbox {
-    height: 20px;
+#chatlog {
+    border: solid black 1px;
     width: 100%;
+    height: 256px;
+    overflow: auto;
+}
+
+#textbox {
+    margin-left: 0;
+    height: 20px;
+    width: 99%;
 }
